<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhyMi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="surveyLocation">Survey Location</string>
    <string name="gender">Gender</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="age">Age</string>
    <string name="country">Country of Origin</string>
    <string name="primaryReason">Primary Reason for Migration</string>
    <string name="secondaryReason">Secondary Reason for Migration</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>

    <string-array name="primaryReasonList">
        <item>Not selected</item>
        <item>Economic</item>
        <item>Family reunification</item>
        <item>Violence/Organized Crime</item>
        <item>Political persecution</item>
        <item>Educational opportunities</item>
        <item>Other</item>
    </string-array>
    <string-array name="secondaryReasonList">
        <item>Not selected</item>
        <item>Economic</item>
        <item>Family reunification</item>
        <item>Violence/Organized Crime</item>
        <item>Political persecution</item>
        <item>Educational opportunities</item>
        <item>Other</item>
    </string-array>

</resources>