<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/genderLabel"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/gender" />

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp" />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/genderMale"
            android:text="@string/genderMale" />

        <RadioButton
            android:id="@+id/genderFemale"
            android:text="@string/genderFemale" />
    </RadioGroup>
 
    <Space
        android:layout_width="1dp"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/ageLabel"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/age" />

    <EditText
        android:id="@+id/ageText"
        android:layout_width="101dp"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>
    
    <Space
        android:layout_width="1dp"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/countryLabel"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:text="@string/country" />

    <EditText
        android:id="@+id/countryText"
        android:layout_width="287dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>
    
    <Spinner  
 		android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
  		android:id="@+id/primaryReasonList"
  		android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="5"
     />

    <Space
        android:layout_column="0"
        android:layout_gravity="fill_vertical"
        android:layout_row="6" />
    
    <Button
        android:id="@+id/saveButton"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_row="7"
        android:text="@string/save" />

    <Button
        android:id="@+id/resetButton"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_row="7"
        android:paddingBottom="4dp"
        android:text="@string/reset"
        android:onClick="resetAction" />

</GridLayout>